[gd_scene load_steps=15 format=3 uid="uid://dqg04iyf3b111"]

[ext_resource type="Script" path="res://main.gd" id="1_1kc81"]
[ext_resource type="AudioStream" uid="uid://dx64xwia70q8j" path="res://sfx/verlassen.wav" id="2_0l16n"]
[ext_resource type="Texture2D" uid="uid://dgd7o60luinhi" path="res://room_assets/extra/van.png" id="3_1syqv"]
[ext_resource type="PackedScene" uid="uid://xa22fo13s7np" path="res://components/npc.tscn" id="4_yfdln"]
[ext_resource type="Texture2D" uid="uid://b6bddjs0dy14b" path="res://npc_assets/npc_01.png" id="5_1ftj0"]

[sub_resource type="Animation" id="Animation_c6b02"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("canvas_layer/color_rect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_w6n01"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("canvas_layer/color_rect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"end_transtition"
}]
}

[sub_resource type="Animation" id="Animation_kwn57"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("canvas_layer/color_rect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_8tn3p"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("canvas_layer/color_rect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v6ihr"]
_data = {
"RESET": SubResource("Animation_c6b02"),
"fade": SubResource("Animation_w6n01"),
"fade_in": SubResource("Animation_kwn57"),
"fade_out": SubResource("Animation_8tn3p")
}

[sub_resource type="Animation" id="Animation_xexoj"]
resource_name = "cutscene_000"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cutscenes/cutscene_01/npc:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(40, 56), Vector2(40, 56)]
}

[sub_resource type="Animation" id="Animation_wqcev"]
resource_name = "cutscene_001"

[sub_resource type="Animation" id="Animation_0eodr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cutscenes/cutscene_01/npc:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(24, 56)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gmtht"]
_data = {
"RESET": SubResource("Animation_0eodr"),
"cutscene_000": SubResource("Animation_xexoj"),
"cutscene_001": SubResource("Animation_wqcev")
}

[node name="main" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_1kc81")

[node name="rooms" type="Node2D" parent="."]

[node name="animation_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v6ihr")
}

[node name="canvas_layer" type="CanvasLayer" parent="."]

[node name="color_rect" type="ColorRect" parent="canvas_layer"]
visible = false
offset_right = 240.0
offset_bottom = 160.0
color = Color(0, 0, 0, 1)

[node name="music_player" type="AudioStreamPlayer" parent="."]
volume_db = -80.0

[node name="sfx_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_0l16n")

[node name="cutscene_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gmtht")
}

[node name="cutscenes" type="Node2D" parent="."]

[node name="cutscene_01" type="Node2D" parent="cutscenes"]
visible = false

[node name="sprite_2d" type="Sprite2D" parent="cutscenes/cutscene_01"]
position = Vector2(-24, 44)
texture = ExtResource("3_1syqv")

[node name="npc" parent="cutscenes/cutscene_01" instance=ExtResource("4_yfdln")]
position = Vector2(24, 56)
txt = ExtResource("5_1ftj0")
direction = Vector2(-1, 0)
sprite_offset = Vector2(0, -3)

[connection signal="animation_finished" from="animation_player" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="cutscene_player" to="." method="_on_cut_scene_player_animation_finished"]
